--- a/go-crud-api/docker-compose.yml
+++ b/go-crud-api/docker-compose.yml
@@ -19,16 +19,23 @@ version: '3.9'
 # более подробно (там есть атрибуты "context", "dockerfile", ещё что-то), 
 # и указываем Dockerfile-ы отдельно для каждого из приложений.
 # Если понадобится, уточнить.
+# При изменения кода в хосте (т.е. вне образа), очевидно, что код в образе не поменяется, он не поменяется,
+# поэтому нужно будет снова вызвать build
 
 # psql -h localhost -p 5432 -d postgres -U postgres -W
 
 services:
   go-app:
-    container_name: go-app
+    container_name: go-app  # daemon Docker-а будет ругаться, если имя контейнера уже используется каким-то контейнером, 
+                            # т.е. контейнеры должны иметь уникальные имена
     image: go-app:1.0.0 # тут ещё можно указать свой username из Dockerhub
     build: .            # Инструкция для build-а образа
     environment:
-                  # Интересно, что хост - это имя приложения. Порт, видимо, выбирается по-умолчанию
+                  # Интересно, что хост - это имя приложения. Порт, видимо, выбирается по-умолчанию.
+                  # UPD: кажется, что контейнер поднимается в какой-то виртуальной сети, 
+                  # и у каждого контейнера свой ip-адрес внутри этой сети, т.к. когда я неуспешно пытался подключиться 
+                  # к этому хосту через его имя (в рамках работы над go-goose), в термнале появлялся какой-то ip-адрес.
+                  # Но это неточно, если понадобится, выяснить.
       DATABASE_URL: "host=go-db user=postgres password=postgres dbname=postgres sslmode=disable"
     ports:        # The format is "host_port:container_port", т.е. "порт машины:порт контейнера"
       - "8000:8000"
