--- a/go-nginx/nginx-test/Dockerfile
+++ b/go-nginx/nginx-test/Dockerfile
@@ -1,3 +1,4 @@
 FROM nginx
-COPY default.conf /etc/nginx/conf.d/default.conf
-COPY data/static/index.html /usr/share/nginx/html/index.html
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+# COPY data/static/index.html /usr/share/nginx/html/index.html
+COPY data data
