--- a/go-nginx/nginx-test/compose.yaml
+++ b/go-nginx/nginx-test/compose.yaml
@@ -1,5 +1,6 @@
 services:
   go-nginx-test-server:
+    container_name: nginx-test-server
     image: nginx
     build:
       context: .
@@ -9,5 +10,12 @@ services:
     #    source: ./.nginx/nginx.conf
     #    target: /etc/nginx/conf.d/default.conf
     #    read_only: true
+    #volumes:
+    #  - /var/www/html:/usr/share/nginx/html
     ports:
       - 8080:80
+
+  # volumes - defines the volume we want to use for storing data inside the container. 
+  # In this case, we mount the /var/www/html directory on the host machine to the /usr/share/nginx/html 
+  # directory in the container.
+
