--- a/go-nginx/nginx-test/nginx.conf
+++ b/go-nginx/nginx-test/nginx.conf
@@ -1,20 +1,31 @@
 server {
-    listen 80;
+    listen       80;
+    server_name  localhost;
 
-    location / { # Это пример из другой конфигурации, там "TODO" не стоит
-      root   /usr/share/nginx/html; # Видимо, статика копируется туда при описании docker файла
-        # The root directive specifies the root directory that will be used to search for a file. 
-        # To obtain the path of a requested file, NGINX appends the request URI to the path specified by the root directive.
-      index  index.html index.htm;  # 
-      try_files $uri /index.html =404;
+    location / {
+        root   /;
+        index  /data/static/index.html;
     }
 
-    # location / {
-    #    proxy_pass http://localhost:8080;
-    #}
+    location /test {
+        root   /;
+        index  /data/static/test_page.html;
+    }
 
     location ~ \.(gif|jpg|png)$ {
         root /data/images;
+    }
+
+    # Интересно, что после пере-build-а, сервер будто бы не сразу обновляется. 
+    # Ответ на / у меня не сразу прилетел именно таким, каким ожидался. Возможно, браузер как-то на это влияет.
+
+    #error_page  404              /404.html;
+
+    # redirect server error pages to the static page /50x.html
+    #
+    error_page   500 502 503 504  /50x.html;
+    location = /50x.html {
+        root   /usr/share/nginx/html;
     }
 
 }
