added knowledge about setting up ssh

--- a/go-crud-api/docker-compose.yml
+++ b/go-crud-api/docker-compose.yml
@@ -38,7 +38,10 @@ services:
                   # Но это неточно, если понадобится, выяснить.
       DATABASE_URL: "host=go-db user=postgres password=postgres dbname=postgres sslmode=disable"
     ports:        # The format is "host_port:container_port", т.е. "порт машины:порт контейнера"
-      - "8000:8000"
+                  # Порты необязательно открывать! То есть, если мне не нужно, чтобы к контейнеру могли обратиться извне машины, 
+                  # порт можно не открывать. При этом, в локальной сети докера он будет открыт, то есть, другие контейнеры 
+                  # смогут к нему обращаться.
+      - "8000:8000" 
     depends_on:   # Список приложений, которые хотим запустить до текущего.
                   # (наверное, текущее не запустится, если зависимости не запустились)
       - go-db
