--- a/go-nginx/nginx-test/.nginx/templates/default.conf.template
+++ b/go-nginx/nginx-test/.nginx/templates/default.conf.template
@@ -7,11 +7,11 @@ server {
         index  /data/static/index.html;
     }
 
-    #location / {
-    #    proxy_pass http://127.0.0.1:8888; # TODO: Вот так?
-    #}
+    location /api/ {
+        proxy_pass ${BACKEND_HOST};
+    }
 
-    location /test {
+    location /test/ {
         root   /;
         index  /data/static/test_page.html;
     }
@@ -20,18 +20,8 @@ server {
         root /data/images;
     }
 
-    # Интересно, что после пере-build-а, сервер будто бы не сразу обновляется. 
-    # Ответ на / у меня не сразу прилетел именно таким, каким ожидался. Возможно, браузер как-то на это влияет.
-
-    # Проксирование
-    location /api {
-        proxy_pass http://localhost:8080;
-    }
     # Запросы должны иметь вид http://localhost:8080/test/ !!!! То есть, не забывать про слеш в конце
 
-    location /helpme {
-       proxy_pass http://go-backend-server:8888; # TODO: Вот так?
-    }
     # When a process inside docker tries to connect to localhost:8081 that translates to "port 8081 on the docker container", 
     # and NOT "port 8081 on the host".
     # То есть, нужно указать ip контейнера внутри сети докера, при этом, выводить порт бекенда наружу не нужно
