--- a/go-nginx/nginx-test/.env
+++ b/go-nginx/nginx-test/.env
@@ -1,3 +1,4 @@
 BACKEND_URL=http://go-backend-server
 BACKEND_PORT=8888
 BACKEND_HOST=http://go-backend-server:8888/
+DOMAIN_NAME=beatch.chickenkiller.com
