--- a/go-nginx/nginx-test/compose.yaml
+++ b/go-nginx/nginx-test/compose.yaml
@@ -1,30 +1,4 @@
 services:
-  go-nginx-test-server:
-    container_name: nginx-test-server
-    image: nginx
-    build:
-      context: .
-      dockerfile: .nginx/Dockerfile
-    environment:
-      BACKEND_URL: ${BACKEND_URL}
-      BACKEND_PORT: ${BACKEND_PORT}
-      BACKEND_HOST: ${BACKEND_HOST}
-    volumes:
-    - .nginx/templates:/etc/nginx/templates
-    #volumes:
-    #  - type: bind
-    #    source: ./.nginx/nginx.conf
-    #    target: /etc/nginx/conf.d/default.conf
-    #    read_only: true
-    #volumes:
-    #  - /var/www/html:/usr/share/nginx/html
-    #volumes:
-    #  - ./mysite.template:/etc/nginx/conf.d/mysite.template
-    ports:
-      - 8080:80
-    depends_on:
-      - go-backend-server
-
   go-backend-server:
     container_name: backend-test-server
     environment:
@@ -35,7 +9,30 @@ services:
     #ports: # The format is "host_port:container_port", т.е. "порт машины:порт контейнера"
     #  - 8080:8888
 
-  # volumes - defines the volume we want to use for storing data inside the container. 
-  # In this case, we mount the /var/www/html directory on the host machine to the /usr/share/nginx/html 
-  # directory in the container.
+  go-nginx-test-server:
+    container_name: nginx-test-server
+    image: nginx
+    build:
+      context: .
+      dockerfile: .nginx/Dockerfile
+    environment:
+      BACKEND_URL: ${BACKEND_URL}
+      BACKEND_PORT: ${BACKEND_PORT}
+      BACKEND_HOST: ${BACKEND_HOST}
+      DOMAIN_NAME: ${DOMAIN_NAME}
+    volumes:
+    - .nginx/templates:/etc/nginx/templates:ro #:ro = read only
+    - ./certbot/www/:/var/www/certbot/:ro
+    ports:
+    - 80:80
+    - 443:443
+    depends_on:
+      - go-backend-server
+
+  certbot:
+    image: certbot/certbot:latest
+    volumes:
+      - ./certbot/www/:/var/www/certbot/:rw
+      - ./certbot/conf/:/etc/letsencrypt/:rw
+
 
